--- a/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html
+++ b/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html
@@ -154,11 +154,11 @@
             </thead>
             <tbody>
               <tr>
-                <td>Orale</td>
-                <td>Scritta</td>
+                <td>orale</td>
+                <td>scritta</td>
               </tr>
               <tr>
-                <td>Pratica</td>
+                <td>pratica</td>
                 <td>estetica</td>
               </tr>
               <tr>
