--- a/pages/learn/storia_della_musica_1/02_00_musica_greca.html
+++ b/pages/learn/storia_della_musica_1/02_00_musica_greca.html
@@ -109,7 +109,7 @@
             Si distinguono diverse fasi di sviluppo:
           <ul>
             <li><b>Periodo Arcaico (fine VIII – primi VII sec a.C.): </b>Progressi nella costruzione della lira e nell’arte di suonarla. La figura più importante è quella di Terpandro di Lesbo, grande citaredo.</li>
-            <li>Fine VI sec: <b></b>Spicca la figura di Laso di Ermione, a lui si deve il termine harmonia e una nuova accordatura della cedra che permetteva l’introduzione del quarto di tono. È un’epoca di preparazione al periodo successivo.</li>
+            <li><b>Fine VI sec: </b>Spicca la figura di Laso di Ermione, a lui si deve il termine harmonia e una nuova accordatura della cedra che permetteva l’introduzione del quarto di tono. È un’epoca di preparazione al periodo successivo.</li>
             <li><b>Nuova musica (tardo V sec): </b>Si intensificava l’attività teorica da parte di autori come Damone e Eratocle. La Nuova Musica è caratterizzata da modulazioni e molteplicità di note. Fu’ un periodo di grandi esecutori
               professionisti. Critici conservatori come Platone e Aristosseno deploravano la Nuova Musica anche se questa godeva del forte favore del pubblico. Fra i musicisti più importanti ricordiamo Timoteo di Mileto e Filosseno di Citera.</li>
             <li><b>Fra il I sec a.C. e il I sec d.C.: </b>Si registra una lacuna nella documentazione disponibile. In questo periodo lo stile musicale risultava meno ambizioso ed elaborato, il genere diatonico aveva trionfato su quello cromatico,
