--- a/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html
+++ b/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>test</title>
+  <title>Importanza della Musica per i Greci</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica 1</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>test</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Importanza della Musica per i Greci</strong></h4>
             </div>
         </div>
     </div>
@@ -93,7 +93,19 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Testimonianze artistiche e letterarie documentano l’influenza pervasiva della musica del canto e  della danza nella vita quotidiana dei Greci.
+                    <br>
+                    <br>
+                    Musica nella societá greca:
+                    <ul>
+                      <li>Peana in onore di Apollo</li>
+                      <li>Ditirambo in onore di Dioniso</li>
+                      <li>Imeneo canto di nozze</li>
+                      <li>Threnos canto funebre</li>
+                      <li>Partenio canto di fanciulle</li>
+                      <li>Epinici in onore dei vincitori dei giochi olimpici</li>
+                      <li>Inni in onore agli dei</li>
+                    </ul>
                   </p>
                 </div>
             </div>
