--- a/pages/learn/storia_della_musica_1/02_00_musica_greca.html
+++ b/pages/learn/storia_della_musica_1/02_00_musica_greca.html
@@ -128,8 +128,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
