--- a/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
+++ b/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
@@ -119,7 +119,7 @@
               segnali militari e in cerimonie religiose.</li>
             <li><b>Tamburi, cimbali, sistri e crotali</b> (strumenti a percussione)</li>
             </p>
-            <h4 class="mbr-section-subtitle align-left mbr-fonts-style mb-4 display-2"><strong>Fine Periodo Arcaico</strong></h4>
+            <h3><strong>Fine Periodo Arcaico</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
               Il primo musico di cui abbiamo notizie storiche è Terpandro, a cui fu' riconosciuto il merito di aver raccolto, classificato e denominato le melodie in base alla loro origine geografica. Queste melodie venivano chiamate nomoi, il musico
               doveva utilizzarle in funzione del tipo di testo che metteva in musica.
