--- a/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
+++ b/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
@@ -119,6 +119,8 @@
               segnali militari e in cerimonie religiose.</li>
             <li><b>Tamburi, cimbali, sistri e crotali</b> (strumenti a percussione)</li>
             </p>
+            <br>
+            <br>
             <h3><strong>Fine Periodo Arcaico</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
               Il primo musico di cui abbiamo notizie storiche è Terpandro, a cui fu' riconosciuto il merito di aver raccolto, classificato e denominato le melodie in base alla loro origine geografica. Queste melodie venivano chiamate nomoi, il musico
@@ -128,7 +130,7 @@
               <b>Nomoi:</b> <i>"Il rispetto dei nomoi significa rispetto per lo Stato".</i>
               <br>
               <br>
-              Associazione tra musica e legalitá
+              Associazione tra musica e legalità
               <br>
               <br>
               <b>Periodo arcaico:</b> senza polis, divisa in regioni.
