--- a/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
+++ b/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html
@@ -121,22 +121,26 @@
             </p>
             <br>
             <br>
-            <h3><strong>Fine Periodo Arcaico</strong></h4>
-            <p class="mbr-text mbr-fonts-style display-7">
-              Il primo musico di cui abbiamo notizie storiche è Terpandro, a cui fu' riconosciuto il merito di aver raccolto, classificato e denominato le melodie in base alla loro origine geografica. Queste melodie venivano chiamate nomoi, il musico
-              doveva utilizzarle in funzione del tipo di testo che metteva in musica.
-              <br>
-              <br>
-              <b>Nomoi:</b> <i>"Il rispetto dei nomoi significa rispetto per lo Stato".</i>
-              <br>
-              <br>
-              Associazione tra musica e legalità
-              <br>
-              <br>
-              <b>Periodo arcaico:</b> senza polis, divisa in regioni.
-        </div>
-      </div>
-    </div>
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                  <h3><strong>Fine Periodo Arcaico</strong></h4>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Il primo musico di cui abbiamo notizie storiche è Terpandro, a cui fu' riconosciuto il merito di aver raccolto, classificato e denominato le melodie in base alla loro origine geografica. Queste melodie venivano chiamate nomoi,
+                      il musico
+                      doveva utilizzarle in funzione del tipo di testo che metteva in musica.
+                      <br>
+                      <br>
+                      <b>Nomoi:</b> <i>"Il rispetto dei nomoi significa rispetto per lo Stato".</i>
+                      <br>
+                      <br>
+                      Associazione tra musica e legalità
+                      <br>
+                      <br>
+                      <b>Periodo arcaico:</b> senza polis, divisa in regioni.
+                </div>
+              </div>
+            </div>
   </section>
 
 
