--- a/pages/learn/caos/01_00_caos_deterministico.html
+++ b/pages/learn/caos/01_00_caos_deterministico.html
@@ -106,7 +106,16 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Caos Deterministico:<b> descrive e modellizza sistemi i cui parametri variano in base a leggi deterministiche, ma i cui valori non sembrano presentare in apparenza un modello deterministico.
+            <b>Caos Deterministico:</b> descrive e modellizza sistemi i cui parametri variano in base a leggi deterministiche, ma i cui valori non sembrano presentare in apparenza un modello deterministico.
+            <br>
+            <br>
+            Ci si aspetta che, una volta scritte le equazioni differenziali che regolano l'evoluzione temporale di un fenomeno, e impostate le condizioni iniziali, si possano risolvere le equazioni stesse e pervenire a una completa conoscenza del
+            sistema, per ogni istante di tempo successivo. Ad esempio la traiettoria oscillatoria di un pendolo (comportamento del sistema nel tempo) o di un oscillatore armonico è perfettamente determinata dall’equazione differenziale che lega
+            l’accelerazione del sistema alla sua velocità e al suo spostamento. (vedi corso sui modelli fisici).
+            <br>
+            <br>
+            Ci sono sistemi che invece modificano il loro comportamento in base alle condizioni iniziali (sensibilità dalle condizioni iniziali), nonostante siano perfettamente individuate le equazioni differenziali che descrivono il sistema. Nel
+            corso sui modelli fisici abbiamo visto due sistemi di equazioni differenziali che evidenziano nello spazio delle fasi l’attrattore di Lorenz e l’attrattore di Rossler (vedi corso sui modelli fisici).
           </p>
         </div>
       </div>
