--- a/pages/learn/caos/02_00_caos_stocastico.html
+++ b/pages/learn/caos/02_00_caos_stocastico.html
@@ -106,7 +106,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Caos Stocastico:<b> descrive e modellizza sistemi i cui parametri variano in base a leggi probabilistiche.
+            <b>Caos Stocastico:</b> descrive e modellizza sistemi i cui parametri variano in base a leggi probabilistiche.
           </p>
         </div>
       </div>
