--- a/pages/learn/caos/01_00_caos_deterministico.html
+++ b/pages/learn/caos/01_00_caos_deterministico.html
@@ -116,6 +116,16 @@
             <br>
             Ci sono sistemi che invece modificano il loro comportamento in base alle condizioni iniziali (sensibilità dalle condizioni iniziali), nonostante siano perfettamente individuate le equazioni differenziali che descrivono il sistema. Nel
             corso sui modelli fisici abbiamo visto due sistemi di equazioni differenziali che evidenziano nello spazio delle fasi l’attrattore di Lorenz e l’attrattore di Rossler (vedi corso sui modelli fisici).
+            <br>
+            <br>
+            Un sistema è detto caotico, se è caratterizzato da una forte dipendenza dalle condizioni iniziali: se lo stato di partenza di un sistema con tali proprietà è modificato anche di poco, si possono produrre effetti molto rilevanti nello
+            stato di arrivo.
+            <br>
+            <br>
+            La simulazione del caos deterministico è possibile grazie al concetto di iterazione di una funzione
+            <br>
+            <br>
+            In generale lo studio di una funzione è una applicazione di una regola su un insieme di punti (dominio) che vengono trasformati in un altro insieme (immagine)
           </p>
         </div>
       </div>
