--- a/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
+++ b/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
@@ -23,7 +23,7 @@
   <meta name="description" content="">
 
 
-  <title>Caos Deterministico</title>
+  <title>Modelli di Simulazione del Caos Deterministico</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -91,7 +91,7 @@
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Caos Deterministico</strong></h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Modelli di Simulazione del Caos Deterministico</strong></h4>
         </div>
       </div>
     </div>
@@ -106,21 +106,13 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Caos Deterministico:</b> descrive e modellizza sistemi i cui parametri variano in base a leggi deterministiche, ma i cui valori non sembrano presentare in apparenza un modello deterministico. Esso sembra non avere legami fra i vari
-            valori.
+            Siamo abituati a pensare ad un'applicazione con un qualcosa generato da un dominio x che si rispecchia nell'immagine o codominio.
             <br>
             <br>
-            Ci si aspetta che, una volta scritte le equazioni differenziali che regolano l'evoluzione temporale di un fenomeno, e impostate le condizioni iniziali, si possano risolvere le equazioni stesse e pervenire a una completa conoscenza del
-            sistema, per ogni istante di tempo successivo. Ad esempio la traiettoria oscillatoria di un pendolo (comportamento del sistema nel tempo) o di un oscillatore armonico è perfettamente determinata dall’equazione differenziale che lega
-            l’accelerazione del sistema alla sua velocità e al suo spostamento. (vedi corso sui modelli fisici).
+            La simulazione del caos deterministico è possibile grazie al concetto di iterazione di una funzione
             <br>
             <br>
-            Ci sono sistemi che invece modificano il loro comportamento in base alle condizioni iniziali (sensibilità dalle condizioni iniziali), nonostante siano perfettamente individuate le equazioni differenziali che descrivono il sistema. Nel
-            corso sui modelli fisici abbiamo visto due sistemi di equazioni differenziali che evidenziano nello spazio delle fasi l’attrattore di Lorenz e l’attrattore di Rossler (vedi corso sui modelli fisici).
-            <br>
-            <br>
-            Un sistema è detto caotico, se è caratterizzato da una forte dipendenza dalle condizioni iniziali: se lo stato di partenza di un sistema con tali proprietà è modificato anche di poco, si possono produrre effetti molto rilevanti nello
-            stato di arrivo.
+            In generale lo studio di una funzione è una applicazione di una regola su un insieme di punti (dominio) che vengono trasformati in un altro insieme (immagine)
           </p>
         </div>
       </div>
