--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -105,6 +105,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_00_caos_deterministico.html" target="_blank"><b>01. Caos Deterministico</b></a></li>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html" target="_blank"><b>01.01. Modelli di Simulazione del Caos Deterministico</b></a></li>
+            </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
           </ul>
           </p>
