--- a/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
+++ b/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
@@ -113,13 +113,28 @@
             <br>
             <br>
             In generale lo studio di una funzione è una applicazione di una regola su un insieme di punti (dominio) che vengono trasformati in un altro insieme (immagine)
+            <br>
+            <br>
+            Il grafico di una funzione rappresenta l’insieme dei valori ”manipolati” dall’applicazione, sull’asse delle ordinate, in relazione ai valori del dominio, rappresentati sull’asse delle ascisse.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-
+  <!-- Image-->
+        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-5">
+                        <div class="image-wrapper">
+                            <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
+                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
