--- a/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
+++ b/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
@@ -99,8 +99,6 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
       <div class="row justify-content-center">
@@ -123,18 +121,49 @@
   </section>
 
   <!-- Image-->
-        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-lg-5">
-                        <div class="image-wrapper">
-                            <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
-                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Nel caos deterministico si considera un unico punto del dominio mentre la funzione viene riapplicata costantemente alle trasformazioni che subisce il punto.
+            <br>
+            <br>
+            In altre parole è come se il nuovo valore prodotto dalla funzione viene riportato in ingresso alla funzione stessa e sostituito al valore di ingresso.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/2.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
