--- a/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
+++ b/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
@@ -113,7 +113,8 @@
             In generale lo studio di una funzione è una applicazione di una regola su un insieme di punti (dominio) che vengono trasformati in un altro insieme (immagine)
             <br>
             <br>
-            Il grafico di una funzione rappresenta l’insieme dei valori ”manipolati” dall’applicazione, sull’asse delle ordinate, in relazione ai valori del dominio, rappresentati sull’asse delle ascisse.
+            Il grafico di una funzione rappresenta l’insieme dei valori ”manipolati” dall’applicazione, sull’asse delle ordinate, in relazione ai valori del dominio, rappresentati sull’asse delle ascisse. Il grafico è la traccia dell'applicazione che
+            realizzo.
           </p>
         </div>
       </div>
@@ -127,7 +128,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
           </div>
         </div>
       </div>
@@ -144,6 +145,9 @@
             <br>
             <br>
             In altre parole è come se il nuovo valore prodotto dalla funzione viene riportato in ingresso alla funzione stessa e sostituito al valore di ingresso.
+            <br>
+            <br>
+            Abbiamo quindi un meccanismo di retroazione con un feedback in cui un insieme dei valori dell'immagine ritorna sul dominio.
           </p>
         </div>
       </div>
@@ -164,14 +168,27 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Non si studiano quindi tutti i punti del dominio, ma alcuni valori particolari. Le funzioni interessanti saranno quelle non lineari.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_00_caos_deterministico.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_punto_fisso.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
