--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -107,6 +107,7 @@
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_00_caos_deterministico.html" target="_blank"><b>01. Caos Deterministico</b></a></li>
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html" target="_blank"><b>01.01. Modelli di Simulazione del Caos Deterministico</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_punto_fisso.html" target="_blank"><b>01.02. Punto Fisso</b></a></li>
             </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
           </ul>
@@ -127,8 +128,8 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/Cartridge_Music_Score.pdf" target="_blank"><b>Cartridge Music Score</b></a></li>
-            </ul>
+
+          </ul>
           </p>
         </div>
       </div>
