--- a/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
+++ b/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html
@@ -161,7 +161,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/2.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Il grafico è la traccia dell'applicazione che realizzo</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 2</p>
           </div>
         </div>
       </div>
