--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -83,6 +83,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>CAOS</strong></h4>
+              <h3 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>Lezioni di Riccardo Santoboni</strong></h3>
             </div>
           </div>
         </div>
