--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -83,6 +83,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ACUSTICA DEGLI AMBIENTI MUSICALI</strong></h4>
+              <p class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>Lezioni di Marco Giordano</strong></p>
             </div>
           </div>
         </div>
