--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -83,7 +83,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ACUSTICA DEGLI AMBIENTI MUSICALI</strong></h4>
-              <p class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>Lezioni di Marco Giordano</strong></p>
+              <p class="card-title mbr-fonts-style align-center"><strong>Lezioni di <a href="https://www.linkedin.com/in/marco-giordano-2069721/" target="_blank">Marco Giordano</a></strong></p>
             </div>
           </div>
         </div>
