--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -83,7 +83,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>CAOS</strong></h4>
-              <p class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>Lezioni di Riccardo Santoboni</strong></p>
+              <p class="card-title mbr-fonts-style align-center"><strong>Lezioni di <a href="https://www.linkedin.com/in/riccardo-santoboni-61922824/" target="_blank">Riccardo Santoboni</a></strong></p>
             </div>
           </div>
         </div>
