--- a/pages/learn/storia_della_musica_1.html
+++ b/pages/learn/storia_della_musica_1.html
@@ -96,6 +96,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA 1</strong></h4>
+              <h3 class="card-title mbr-fonts-style align-center"><strong>Lezioni di <a href="https://www.linkedin.com/in/antonietta-cerocchi-42734a110/" target="_blank"><b>Antonietta Cerocchi</b></a></strong></h3>
             </div>
           </div>
         </div>
