--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -83,6 +83,7 @@
               <div class="card-wrapper">
                   <div class="card-box align-center">
                       <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA ELETTROACUSTICA</strong></h4>
+                      <h3 class="card-title mbr-fonts-style align-center"><strong>Lezioni di <a href="https://www.linkedin.com/in/luigi-pizzaleo-23539320/" target="_blank"><b>Luigino Pizzaleo</b></a></strong></h3>
                   </div>
               </div>
           </div>
