--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -109,10 +109,22 @@
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html" target="_blank"><b>01.01. Modelli di Simulazione del Caos Deterministico</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_punto_fisso.html" target="_blank"><b>01.02. Punto Fisso</b></a></li>
+              <ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>01.02.01_ Bacino di Attrazione</b></a></li>
+              </ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_equazione_logistica.html" target="_blank"><b>01.03. Equazione Logistica</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_diagramma_delle_orbite.html" target="_blank"><b>01.04. Diagramma delle Orbite</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_00_iterazione_nel_piano_complesso.html" target="_blank"><b>01.05. Iterazioe nel Piano Complesso</b></a></li>
+              <ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_01_insiemi_di_julia.html" target="_blank"><b>01.05.01. Insiemi di Julia</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_02_insieme_di_mandlbrot.html" target="_blank"><b>01.05.02. Insieme di Mandlbrot</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_03_frattali.html" target="_blank"><b>01.05.03. Frattali</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_04_triangolo_di_sierpinski.html" target="_blank"><b>01.05.04. Triangolo di Sierpinski</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_05_05_fiocco_di_neve_di_kock.html" target="_blank"><b>01.05.05. Fiocco di Neve di Kock</b></a></li>
+              </ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
             </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
-          </ul>
-          </p>
+            </p>
         </div>
       </div>
     </div>
