--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -110,7 +110,7 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_01_modelli_di_simulazione_del_caos_deterministico.html" target="_blank"><b>01.01. Modelli di Simulazione del Caos Deterministico</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_punto_fisso.html" target="_blank"><b>01.02. Punto Fisso</b></a></li>
               <ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>01.02.01_ Bacino di Attrazione</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>01.02.01. Bacino di Attrazione</b></a></li>
               </ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_equazione_logistica.html" target="_blank"><b>01.03. Equazione Logistica</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_diagramma_delle_orbite.html" target="_blank"><b>01.04. Diagramma delle Orbite</b></a></li>
