--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -134,7 +134,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Qualsiasi sia l’iterazione, la risposta presenta sempre il valore 1. Il valore 1 è detto punto fisso
+            Qualsiasi sia l’iterazione, la risposta presenta sempre il valore 1. Il valore 1 è detto <b>punto fisso</b>
             dell’iterazione. Vediamo cosa succede se ci spostiamo di poco.
             <br>
             <br>
@@ -153,6 +153,36 @@
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/4.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 - s(1,30) = √1,30</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Notiamo che al crescere dell’iterazione, la risposta tende al valore 1, cioè al <b>punto fisso</b>.
+            <br>
+            <br>
+          <h3>Esempio 3: x = 0,93;</h3>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/5.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5 - s(0,93) = √0,93</p>
           </div>
         </div>
       </div>
