--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -189,6 +189,19 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Al crescere dell’iterazione, anche in questo caso la risposta tende al valore 1, cioè al <b>punto fisso</b>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
