--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Consideriamo la funzione non lineare <b>s(x) = √x</b>
+            Consideriamo la funzione non lineare <b>s(x) = √x</b>.
             <br>
             <br>
           <h3>Esempio 1: x = 1;</h3>
@@ -138,7 +138,9 @@
             dell’iterazione. Vediamo cosa succede se ci spostiamo di poco.
             <br>
             <br>
-          <h3>Esempio 2: x = 1,30;</h3>
+          <h3>Esempio 2:
+            <br>
+            <b>x = 1,30</b></h3>
           </p>
         </div>
       </div>
