--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -107,7 +107,9 @@
             Consideriamo la funzione non lineare <b>s(x) = √x</b>.
             <br>
             <br>
-          <h3>Esempio 1: x = 1;</h3>
+            <h3>Esempio 1:
+              <br>
+              <b>x = 1</b></h3>
           </p>
         </div>
       </div>
@@ -170,7 +172,9 @@
             Notiamo che al crescere dell’iterazione, la risposta tende al valore 1, cioè al <b>punto fisso</b>.
             <br>
             <br>
-          <h3>Esempio 3: x = 0,93;</h3>
+            <h3>Esempio 3:
+              <br>
+              <b>x = 0,93</b></h3>
           </p>
         </div>
       </div>
