--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -142,7 +142,7 @@
             <br>
           <h3>Esempio 2:
             <br>
-            <b>x = 1,30</b></h3>
+            <b>x = 1.30</b></h3>
           </p>
         </div>
       </div>
@@ -156,7 +156,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/4.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 - s(1,30) = √1,30</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 - s(1.30) = √1.30</p>
           </div>
         </div>
       </div>
@@ -174,7 +174,7 @@
             <br>
             <h3>Esempio 3:
               <br>
-              <b>x = 0,93</b></h3>
+              <b>x = 0.93</b></h3>
           </p>
         </div>
       </div>
@@ -188,8 +188,53 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/5.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5 - s(0,93) = √0,93</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5 - s(0.93) = √0.93</p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Al crescere dell’iterazione, anche in questo caso la risposta tende al valore 1, cioè al <b>punto fisso</b>.
+            <br>
+            <br>
+            <h3>Esempio 4:
+              <br>
+              <b>x = 0.2</b></h3>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/5.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6 - s(0.2) = √0.2</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Anche con x = 0.2 si arriva rapidamente al punto fisso x = 1
+          </p>
         </div>
       </div>
     </div>
