--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -219,7 +219,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/5.webp" alt="www.gabrielavelitch.com">
+            <img src="https://www.gabrielavelitch.com/img/caos/6.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6 - s(0.2) = √0.2</p>
           </div>
         </div>
@@ -233,7 +233,10 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Anche con x = 0.2 si arriva rapidamente al punto fisso x = 1
+            Anche con x = 0.2 si arriva rapidamente al punto fisso x = 1.
+            <br>
+            <br>
+            L’insieme dei valori prodotti dalle successive iterazioni del valore di partenze viene detta <b>orbita del punto</b>.
           </p>
         </div>
       </div>
