--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -237,24 +237,29 @@
             <br>
             <br>
             L’insieme dei valori prodotti dalle successive iterazioni del valore di partenze viene detta <b>orbita del punto</b>.
+            <br>
+            <br>
+            Di seguito un programma in Python che stampa i valori dell’orbita della iterata della funzione <b>s(x) = √x</b>.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-    <div class="container">
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <p class="mbr-text mbr-fonts-style display-7">
-            Al crescere dell’iterazione, anche in questo caso la risposta tende al valore 1, cioè al <b>punto fisso</b>.
-          </p>
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/7.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 7 - Punto fisso in Python</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
