--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -111,6 +111,7 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_00_punto_fisso.html" target="_blank"><b>01.02. Punto Fisso</b></a></li>
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>01.02.01. Bacino di Attrazione</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html" target="_blank"><b>01.02.02. Analisi Grafica dei Punti Fissi</b></a></li>
               </ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_equazione_logistica.html" target="_blank"><b>01.03. Equazione Logistica</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_diagramma_delle_orbite.html" target="_blank"><b>01.04. Diagramma delle Orbite</b></a></li>
