--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -86,21 +86,60 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Un modo differente per verificare i punti fissi è attraverso il grafico.
+                    Consideriamo infatti la funzione y(x)=x che associa al punto dell’immagine y il valore attuale del punto sul dominio.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/8.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 8</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Consideriamo ora una funzione non lineare che insiste sullo stesso grafico.
+                      Preso un punto iniziale sull’asse delle ascisse, prendiamo il valore corrispondente sull’asse delle ordinate e proiettiamo il valore ricavato sulla retta y=x per poter ricavare il nuovo punto di partenza sull’asse delle ascisse.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
+              <div class="image-wrapper">
+                <img src="https://www.gabrielavelitch.com/img/caos/9.webp" alt="www.gabrielavelitch.com">
+                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 9</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
