--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -141,6 +141,60 @@
         </div>
       </section>
 
+      <!-- Text-->
+      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-8">
+                      <p class="mbr-text mbr-fonts-style display-7">
+                        Procediamo in modo analogo per determinare il nuovo punto f(f(a).
+                      </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Image-->
+        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-5">
+                <div class="image-wrapper">
+                  <img src="https://www.gabrielavelitch.com/img/caos/10.webp" alt="www.gabrielavelitch.com">
+                  <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 10</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Text-->
+        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-8">
+                        <p class="mbr-text mbr-fonts-style display-7">
+                          La figura seguente illustra la reiterata <b>s(x) = √x</b>  del punto x < 1; si vede chiaramente che l’orbita tende al <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_00_punto_fisso.html" target="_blank"><b>punto fisso</b></a> 1.
+                        </p>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+          <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+            <div class="container-fluid">
+              <div class="row justify-content-center">
+                <div class="col-12 col-lg-5">
+                  <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/img/caos/11.webp" alt="www.gabrielavelitch.com">
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 11</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
