--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -105,7 +105,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Un modo differente per verificare i punti fissi è attraverso il grafico.
-            Consideriamo infatti la funzione y(x)=x che associa al punto dell’immagine y il valore attuale del punto sul dominio.
+            Consideriamo infatti la funzione <b>y(x) = x</b> che associa al punto dell’immagine y il valore attuale del punto sul dominio.
           </p>
         </div>
       </div>
@@ -133,7 +133,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Consideriamo ora una funzione non lineare che insiste sullo stesso grafico.
-            Preso un punto iniziale sull’asse delle ascisse, prendiamo il valore corrispondente sull’asse delle ordinate e proiettiamo il valore ricavato sulla retta y=x per poter ricavare il nuovo punto di partenza sull’asse delle ascisse.
+            Preso un punto iniziale sull’asse delle ascisse, prendiamo il valore corrispondente sull’asse delle ordinate e proiettiamo il valore ricavato sulla retta y = x per poter ricavare il nuovo punto di partenza sull’asse delle ascisse.
           </p>
         </div>
       </div>
