--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -209,6 +209,20 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Il coseno ha un punto di attrazione 0.73908. Mentre per le funzioni dispari vediamo che abbiamo due punti di attrazione. I punti della x^2 vengono detti <a
+              href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html" target="_blank"><b>punti fissi ripulsori</b></a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
     <div class="container-fluid">
