--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -216,7 +216,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Il coseno ha un punto di attrazione 0.73908. Mentre per le funzioni dispari vediamo che abbiamo due punti di attrazione. I punti della x^2 vengono detti <a
-              href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html" target="_blank"><b>punti fissi ripulsori</b></a>.
+              href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html" target="_blank"><b>punti fissi repulsori</b></a>.
           </p>
         </div>
       </div>
