--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -160,7 +160,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Procediamo in modo analogo per determinare il nuovo punto f(f(a).
+            Procediamo in modo analogo per determinare il nuovo punto f(f(a)).
           </p>
         </div>
       </div>
