--- a/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
+++ b/pages/learn/caos/01_02_02_analisi_grafica_dei_punti_fissi.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Un modo differente per verificare i punti fissi è attraverso il grafico.
+            Un modo differente per verificare i <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_00_punto_fisso.html" target="_blank"><b>punti fissi</b></a> è attraverso il grafico.
             Consideriamo infatti la funzione <b>y(x) = x</b> che associa al punto dell’immagine y il valore attuale del punto sul dominio.
           </p>
         </div>
