--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -93,7 +93,9 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Nei paragrafi precedenti abbiamo visto che alcune orbite conducono ad un punto fisso, mentre altre oscillano periodicamente.
+                    Inoltre mentre alcune iterate conducono inesorabilmente verso un punto fisso, altre funzioni iterate conducono a punti fissi differenti, in base alle condizioni di inizio.
+                    Consideriamo la funzione di partenza <b>𝑓(x) = −x<sup>3</sup></b>.
                   </p>
                 </div>
             </div>
